--- a/FinalProject/app/build.gradle
+++ b/FinalProject/app/build.gradle
@@ -12,13 +12,13 @@ buildscript {
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.0-rc1"
 
     defaultConfig {
         applicationId "com.udacity.gradle.builditbigger"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -37,12 +37,17 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     endpointsServer project(path: ':backend', configuration: 'endpoints')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
-    implementation 'com.google.api-client:google-api-client:1.23.0'
-    implementation 'com.google.http-client:google-http-client-android:1.23.0'
+    implementation 'com.google.api-client:google-api-client:1.23.0' ,{
+        exclude module: 'guava-jdk5'
+    }
+    implementation 'com.google.http-client:google-http-client-android:1.23.0',{
+        exclude module: 'guava-jdk5'
+    }
     implementation 'com.google.code.findbugs:jsr305:3.0.1'
     implementation project(':Jokes')
+    implementation project(':jokeactivity')
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
