--- a/FinalProject/backend/build.gradle
+++ b/FinalProject/backend/build.gradle
@@ -26,8 +26,24 @@ targetCompatibility = JavaVersion.VERSION_1_7
 dependencies {
     implementation 'com.google.endpoints:endpoints-framework:2.0.9'
     implementation 'javax.inject:javax.inject:1'
-
+    implementation project(':Jokes')
     implementation 'javax.servlet:servlet-api:2.5'
-    implementation 'com.google.api-client:google-api-client:1.23.0'
-    implementation 'com.google.http-client:google-http-client-android:1.23.0'
+    implementation 'com.google.api-client:google-api-client:1.23.0',{
+        exclude module: 'guava-jdk5'
+    }
+    implementation 'com.google.http-client:google-http-client-android:1.23.0',{
+        exclude module: 'guava-jdk5'
+    }
+}
+
+appengine {
+    deploy {
+
+        project = findProperty("appengine.deploy.project")
+        version = findProperty("appengine.deploy.version")
+        def promoteProp = findProperty("appengine.deploy.promote")
+        if (promoteProp != null) {
+            promote = new Boolean(promoteProp)
+        }
+    }
 }
